# MobileGlues

./: .gitignore  .gitmodules  0_Development build (2, ios).txt  Makefile  README.md  README.md.backup  README_CN.md
.github/workflows/: development.yml  development_speedup.yml  upload-tipa.yml
JavaApp/src/launcher/net/kdt/pojavlaunch/: PojavLauncher.java
MobileGlues-cpp/: CMakeLists.txt
MobileGlues-cpp/config/: settings.cpp
Natives/: CMakeLists.txt  DownloadProgressViewController.m  Info.plist  JavaGUIViewController.m  JavaLauncher.m  LauncherMenuViewController.m  LauncherNavigationController.h  LauncherNavigationController.m  LauncherNewsViewController.m  LauncherPrefContCfgViewController.m  LauncherPreferencesViewController.m  LauncherProfilesViewController.m  LauncherSplitViewController.m  MinecraftResourceDownloadTask.m  PLLogOutputView.m  PLPreferences.m  SurfaceViewController+LogView.m  SurfaceViewController.h  SurfaceViewController.m  TouchControllerPreferencesViewController.h  TouchControllerPreferencesViewController.m  dyld_bypass_validation.m  input_bridge_v3.m  main_hook.m  utils.h  utils.m
Natives/authenticator/: MicrosoftAuthenticator.m
Natives/installer/: ForgeInstallViewController.m
Natives/installer/modpack/: ModpackConfiguration.m  ModrinthAPI.m
Natives/resources/: UniversalJIT26.js  custom_layout.json
Natives/resources/en.lproj/: Localizable.strings
Natives/resources/zh-Hans.lproj/: Localizable.strings
src/main/cpp/: version.h
src/main/cpp/gl/: multidraw.cpp  texture.cpp  texture.h
src/main/cpp/shaders/: multidraw_compute.comp
